added experience section

--- a/assets/css/main-modular.css
+++ b/assets/css/main-modular.css
@@ -18,6 +18,7 @@
 @import 'components/header.css';
 @import 'components/hero.css';
 @import 'components/about.css';
+@import 'components/experience.css';
 @import 'components/services.css';
 @import 'components/counter.css';
 @import 'components/portfolio.css';
